--- a/mywebapp-data/src/main/resources/hibernate/hibernate.properties
+++ b/mywebapp-data/src/main/resources/hibernate/hibernate.properties
@@ -5,4 +5,4 @@ jdbc.password=system
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 hibernate.format_sql=false
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=false
