--- a/mywebapp-parent/pom.xml
+++ b/mywebapp-parent/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>1.6</java.version>
 		<spring.version>4.3.6.RELEASE</spring.version>
+		<spring.security.version>4.2.1.RELEASE</spring.security.version>
 		<cglib.version>2.2.2</cglib.version>
 	</properties>
 
@@ -62,6 +63,18 @@
 			<version>${spring.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
 		</dependency>
 
 		<!-- CGLib for @Configuration -->
