--- a/mywebapp/src/main/webapp/WEB-INF/web.xml
+++ b/mywebapp/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,14 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<!-- Cargamos control de sesion -->
+	<listener>
+		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>	
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 
 	<!-- Definimos el servlet del tipo spring dispatcher -->
 	<servlet>
@@ -24,7 +32,17 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config>
+
+	<!-- Activamos seguridad para las URLs indicadas -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	
 </web-app>
