--- a/mywebapp-parent/pom.xml
+++ b/mywebapp-parent/pom.xml
@@ -6,19 +6,20 @@
 	<version>1.0</version>
 	<packaging>pom</packaging>
 	<name>mywebapp-parent</name>
-	
+
 	<modules>
 		<module>../mywebapp-data</module>
-        <module>../mywebapp-services</module>
-        <module>../mywebapp</module>
-       
-    </modules>
+		<module>../mywebapp-services</module>
+		<module>../mywebapp</module>
+
+	</modules>
 
 
 	<properties>
 		<java.version>1.6</java.version>
 		<spring.version>4.3.6.RELEASE</spring.version>
 		<spring.security.version>4.2.1.RELEASE</spring.security.version>
+		<log4j.version>1.2.17</log4j.version>
 		<cglib.version>2.2.2</cglib.version>
 	</properties>
 
@@ -64,7 +65,7 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -98,6 +99,13 @@
 			<artifactId>jsp-api</artifactId>
 			<version>2.1</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<!-- Log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 
