--- a/mywebapp-services/pom.xml
+++ b/mywebapp-services/pom.xml
@@ -1,23 +1,30 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>my.project</groupId>
-  <artifactId>mywebapp-services</artifactId>
-  <version>1.0</version>
-  <name>mywebapp-services</name>
-  	<parent>
-        <groupId>my.project</groupId>
-        <artifactId>mywebapp-parent</artifactId>
-        <version>1.0</version>
-    </parent>
-  
-  <packaging>jar</packaging>
-  
-  <dependencies>
-  		<dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>my.project</groupId>
+	<artifactId>mywebapp-services</artifactId>
+	<version>1.0</version>
+	<name>mywebapp-services</name>
+	<parent>
+		<groupId>my.project</groupId>
+		<artifactId>mywebapp-parent</artifactId>
+		<version>1.0</version>
+	</parent>
+
+	<packaging>jar</packaging>
+
+	<dependencies>
+		<dependency>
 			<groupId>my.project</groupId>
 			<artifactId>mywebapp-data</artifactId>
 			<version>1.0</version>
 			<scope>provided</scope>
 		</dependency>
-  </dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+	</dependencies>
 </project>
